<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/movieFragment">

    <fragment
        android:id="@+id/movieFragment"
        android:name="com.movie_explorer.ui.fragments.MovieFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_movie" >
        <action
            android:id="@+id/action_movieFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.movie_explorer.ui.fragments.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.movie_explorer.ui.fragments.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <argument android:name="movieId"
            app:argType="integer" />
    </fragment>

</navigation>